Closed
Bug 621841
Opened 15 years ago
Closed 14 years ago
"ASSERTION: Reflow hint bits set without actually asking for a reflow"
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect, P1)
Tracking
()
RESOLVED
FIXED
mozilla5
People
(Reporter: jruderman, Assigned: bzbarsky)
References
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
###!!! ASSERTION: Must have data if restyle bit is set: 'gotData', file layout/base/RestyleTracker.cpp, line 300
###!!! ASSERTION: Reflow hint bits set without actually asking for a reflow: '!(aHint & nsChangeHint_ReflowFrame) || (aHint & nsChangeHint_NeedReflow)', file layout/base/nsStyleChangeList.cpp, line 100
###!!! ASSERTION: Reflow hint bits set without actually asking for a reflow: '!(hint & nsChangeHint_ReflowFrame) || (hint & nsChangeHint_NeedReflow)', file layout/base/nsCSSFrameConstructor.cpp, line 8000
Reporter | ||
Comment 1•15 years ago
|
||
![]() |
Assignee | |
Comment 2•15 years ago
|
||
I can reproduce that first assertion, but not the other two. I'll post a patch for that first assert, but could you check whether it fixes the other two for you?
![]() |
Assignee | |
Comment 3•15 years ago
|
||
Attachment #500248 -
Flags: review?(dbaron)
![]() |
Assignee | |
Updated•15 years ago
|
Assignee: nobody → bzbarsky
Priority: -- → P1
Whiteboard: [need review]
What is frameset doing that's special here and requires all this bit-mangling?
![]() |
Assignee | |
Comment 5•15 years ago
|
||
It handles constructing frames for its children by hand instead of going through the frame constructor. From the frame constructor's point of view, frameset is a leaf frame...
The code I'm adding here is basically a copy of what we do in ProcessChildren in the frame constructor, like the comments say.
Comment on attachment 500248 [details] [diff] [review]
Clear restyle flags in frameset kids when we process them.
ok, r=dbaron
Attachment #500248 -
Flags: review?(dbaron) → review+
![]() |
Assignee | |
Updated•15 years ago
|
Whiteboard: [need review] → [need gk2 ship]
Reporter | ||
Comment 7•15 years ago
|
||
Yes, this patch fixes all the assertions for me.
![]() |
Assignee | |
Comment 8•14 years ago
|
||
Whiteboard: [need gk2 ship] → fixed-in-birch
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: fixed-in-birch
Target Milestone: --- → mozilla2.2
![]() |
Assignee | |
Updated•14 years ago
|
Flags: in-testsuite+
Updated•7 years ago
|
Product: Core → Core Graveyard
Updated•7 years ago
|
Component: Layout: HTML Frames → Layout: Images
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•