Bug 621841.  Clear restyle flags in frameset kids when we process them.  r=dbaron